DATAP-1452 button color contrast fix, charts not resizing (#544)
* fix color contrast

* fixed bug with chart not redrawing when window resized

--- a/src/components/RefineBar/RefineBar.less
+++ b/src/components/RefineBar/RefineBar.less
@@ -11,11 +11,11 @@
     }
     button {
       &.selected {
-        background-color: var(--pacific-80);
+        background-color: var(--pacific-60);
         font-weight: 600;
       }
       &:not(.selected) {
-        background-color: var(--pacific-40);
+        background-color: var(--pacific-20);
       }
     }
     &:not(.filter-panel-toggle) {
